[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { version = "0.14.0", default-features = false }
hex = "0.4.3"
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
fastcrypto="0.1.3"
proto={path="../proto", version="0.1.0"}
error={path="../error", version="0.1.0"}
ed25519-dalek = "2.0.0-rc.2"
rand = "0.8.5"
bson = "2.5.0"
serde_json = "1.0.88"
byteorder = "1.4.3"

[dev-dependencies]
chrono = "0.4.22"