[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { version = "0.14.0", default-features = false }
base={ path = "../base" }
proto={ path ="../proto" }
error={ path = "../error" }
types={ path = "../types" }
crypto={ path = "../crypto" }
merkdb = {path = "../merkdb"}
tracing = "0.1"
fastcrypto = { workspace = true, features = ["copy_key"] }
redb = "0.14.0"
hex = "0.4.3"
bytes = "1"
prost = "0.11"
prost-types = "0.11"
tempdir = "0.3.7"
byteorder = "1.4.3"
serde_json = "1.0.88"
serde = { version = "1.0.144", features = ["derive"] }
bson = "2.5.0"
itertools = "0.10.5"
ed = "0.3.0"